tests/ui/async-await/field-assign-nonsend.stderr
error: future cannot be sent between threads safely
  --> $DIR/field-assign-nonsend.rs:42:17
   |
LL |     assert_send(agent.handle());
   |                 ^^^^^^^^^^^^^^ future returned by `handle` is not `Send`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `Rc<String>`, which is required by `impl Future<Output = ()>: Send`
note: captured value is not `Send` because `&mut` references cannot be sent unless their referent is `Send`
  --> $DIR/field-assign-nonsend.rs:16:21
   |
LL |     async fn handle(&mut self) {
   |                     ^^^^^^^^^ has type `&mut Agent` which is not `Send`, because `Agent` is not `Send`
note: required by a bound in `assert_send`
  --> $DIR/field-assign-nonsend.rs:37:19
   |
LL | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error: aborting due to 1 previous error

